[fix] 同じURLに2回アクセスすると500エラー